# plants-n-trees

./: .gitignore  README.md  pyproject.toml  show.txt
archive/: kvak.py  kvak_legacy_working.py
src/lsystem_visualizer/: cli.py  colors.py  config.py  geometry.py  grammar.py  meshes.py  presets.py  renderer.py  turtle.py
src/lsystem_visualizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_lsystem.py
