name = "lsystem-visualizer"
description = "3D stochastic L-system plant visualizer"

[project]
name = "pyth"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.6",
    "pyglet<2",
    "scipy>=1.18.0",
    "trimesh>=4.12.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["archive"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[project.scripts]
lsystem = "lsystem_visualizer.cli:main"
nudny-strom = "lsystem_visualizer.cli:nudny_strom"
strom = "lsystem_visualizer.cli:strom"
jiny-strom = "lsystem_visualizer.cli:jiny_strom"
kerik = "lsystem_visualizer.cli:kerik"
trava = "lsystem_visualizer.cli:trava"
dalsi-strom = "lsystem_visualizer.cli:dalsi_strom"
